# permission-manager-drf

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  runtests.py  tox.ini
.github/workflows/: linter.yml  release.yml  tests.yml
docs/: conf.py  index.rst
docs/source/: field.rst  install.rst  manager.rst  pagination.rst  result.rst  settings.rst  usage.rst
permission_manager_drf/: __init__.py  fields.py  managers.py  pagination.py  permissions.py  settings.py  utils.py
tests/: conftest.py  test_manager.py  test_pagination.py  test_permission_field.py  test_utils.py  test_view_permissions.py
tests/app/: models.py  pagination.py  urls.py  views.py
