[project]
name = "permission-manager-drf"
version = "1.0.0"
description = "A simple way to manage object permissions in drf."
authors = [
    {name = "Grigory Mishchenko", email = "grishkokot@gmail.com"},
]
license = "MIT"
readme = "README.md"
keywords = ["permissions", "drf", "rest framework"]
repository = "https://github.com/kindlycat/permission-manager-drf"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "djangorestframework>=3.14.0",
    "permission-manager>=0.5.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "ipython>=8.35.0",
    "ipdb>=0.13.13",
    "ruff>=0.11.4",
    "sphinx>=8.1.3",
    "furo>=2024.8.6",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs",
]

line-length = 79
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", "D101", "D102", "EXE001", "D107", "ANN003", "ANN001",
    "ARG002", "ANN002", "D103", "D106", "D104", "ANN201", "COM812", "ISC001",
    "ANN401", "TRY003", "EM102", "EM101", "RET503"
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "RUF012", "D105"]

[tool.ruff.lint.isort]
section-order = [
    "future", "standard-library", "third-party", "first-party", "local-folder"
]
lines-after-imports = 2
combine-as-imports = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v"

[tool.coverage.run]
source = ["permission_manager_drf"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]
